compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__use___invalid_callback_type_4.snap
---
source: compiler-core/src_refactored/__core/type_/tests/use_.rs
assertion_line: 241
expression: "\nlet x = fn(f) { \"Hello, \" <> f() }\nlet y = fn(f) { 1 + f() }\nlet z = fn(f) { 1.0 +. f() }\nuse <- x()\nuse <- y()\nlet n = 1\nuse <- z()\n1.0\n"
snapshot_kind: text
---
----- SOURCE CODE

let x = fn(f) { "Hello, " <> f() }
let y = fn(f) { 1 + f() }
let z = fn(f) { 1.0 +. f() }
use <- x()
use <- y()
let n = 1
use <- z()
1.0


----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:8:1
  │
8 │ use <- z()
  │ ^^^^^^^^^^

Expected type:

    Int

Found type:

    Float

error: Type mismatch
  ┌─ /src/one/two.gleam:6:1
  │
6 │ use <- y()
  │ ^^^^^^^^^^

Expected type:

    String

Found type:

    Int
