compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__use___just_use_in_fn_body.snap
---
source: compiler-core/src_refactored/__core/type_/tests/use_.rs
assertion_line: 370
expression: "\npub fn main() {\n  use <- wibble()\n}\n\nfn wibble(f) {\n  f()\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main() {
  use <- wibble()
}

fn wibble(f) {
  f()
}


----- WARNING
warning: Incomplete use expression
  ┌─ /src/warning/wrn.gleam:3:3
  │
3 │   use <- wibble()
  │   ^^^^^^^^^^^^^^^ This code is incomplete

This code will crash if it is run. Be sure to finish it before
running your program.
A use expression must always be followed by at least one expression.
