compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__use___no_callback_body.snap
---
source: compiler-core/src_refactored/__core/type_/tests/use_.rs
assertion_line: 192
expression: "\npub fn main() {\n  let thingy = fn(f) { f() }\n  use <- thingy()\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main() {
  let thingy = fn(f) { f() }
  use <- thingy()
}


----- WARNING
warning: Incomplete use expression
  ┌─ /src/warning/wrn.gleam:4:3
  │
4 │   use <- thingy()
  │   ^^^^^^^^^^^^^^^ This code is incomplete

This code will crash if it is run. Be sure to finish it before
running your program.
A use expression must always be followed by at least one expression.
