compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__use___wrong_arity.snap
---
source: compiler-core/src_refactored/__core/type_/tests/use_.rs
assertion_line: 104
expression: "\nlet f = fn(callback) { callback(1, 2) }\nuse <- f\n123\n"
snapshot_kind: text
---
----- SOURCE CODE

let f = fn(callback) { callback(1, 2) }
use <- f
123


----- ERROR
error: Incorrect arity
  ┌─ /src/one/two.gleam:3:8
  │
3 │ use <- f
  │ ---    ^
  │ │       
  │ Expected 2 arguments, got 0

This function takes a callback that expects 2 arguments. But none were
provided on the left hand side of `<-`.

See: https://tour.gleam.run/advanced-features/use/
