compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__use___wrong_callback_arg.snap
---
source: compiler-core/src_refactored/__core/type_/tests/use_.rs
assertion_line: 290
expression: "\nlet x = fn(f) { \"Hello, \" <> f(1) }\nuse n <- x()\nn <> \"Giacomo!\"\n"
snapshot_kind: text
---
----- SOURCE CODE

let x = fn(f) { "Hello, " <> f(1) }
use n <- x()
n <> "Giacomo!"


----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:4:1
  │
4 │ n <> "Giacomo!"
  │ ^

The <> operator expects arguments of this type:

    String

But this argument has this type:

    Int
