compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__use___wrong_callback_arity.snap
---
source: compiler-core/src_refactored/__core/type_/tests/use_.rs
assertion_line: 257
expression: "\nlet x = fn(f) { \"Hello, \" <> f() }\nuse _ <- x()\n\"Giacomo!\"\n"
snapshot_kind: text
---
----- SOURCE CODE

let x = fn(f) { "Hello, " <> f() }
use _ <- x()
"Giacomo!"


----- ERROR
error: Incorrect arity
  ┌─ /src/one/two.gleam:3:10
  │
3 │ use _ <- x()
  │     -    ^^^
  │     │     
  │     Expected no arguments, got 1

This function takes a callback that expects no arguments. But 1 was
provided on the left hand side of `<-`.

See: https://tour.gleam.run/advanced-features/use/
