compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__use___wrong_callback_arity_2.snap
---
source: compiler-core/src_refactored/__core/type_/tests/use_.rs
assertion_line: 268
expression: "\nlet x = fn(f) { \"Hello, \" <> f(1) }\nuse <- x()\n\"Giacomo!\"\n"
snapshot_kind: text
---
----- SOURCE CODE

let x = fn(f) { "Hello, " <> f(1) }
use <- x()
"Giacomo!"


----- ERROR
error: Incorrect arity
  ┌─ /src/one/two.gleam:3:8
  │
3 │ use <- x()
  │ ---    ^^^
  │ │       
  │ Expected 1 argument, got 0

This function takes a callback that expects 1 argument. But none were
provided on the left hand side of `<-`.

See: https://tour.gleam.run/advanced-features/use/
